// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tree creation add constant 1`] = `
{
  "__nodeType": "add",
  "dataType": "i32",
  "left": {
    "__nodeType": "constant",
    "dataType": "i32",
    "returnType": "i32",
    "value": 1,
  },
  "returnType": "i32",
  "right": {
    "__nodeType": "constant",
    "dataType": "i32",
    "returnType": "i32",
    "value": 2,
  },
}
`;

exports[`tree creation addFunc 1`] = `
[
  {
    "__nodeType": "func",
    "body": {
      "__nodeType": "add",
      "dataType": "i32",
      "left": {
        "__nodeType": "localGet",
        "dataType": "i32",
        "name": "a",
        "returnType": "i32",
      },
      "returnType": "i32",
      "right": {
        "__nodeType": "localGet",
        "dataType": "i32",
        "name": "b",
        "returnType": "i32",
      },
    },
    "dataType": "i32",
    "exportName": null,
    "locals": [],
    "name": "add",
    "params": [
      [
        "i32",
        "a",
      ],
      [
        "i32",
        "b",
      ],
    ],
  },
  {
    "__nodeType": "func",
    "body": {
      "__nodeType": "add",
      "dataType": "i32",
      "left": {
        "__nodeType": "localGet",
        "dataType": "i32",
        "name": "a",
        "returnType": "i32",
      },
      "returnType": "i32",
      "right": {
        "__nodeType": "localGet",
        "dataType": "i32",
        "name": "b",
        "returnType": "i32",
      },
    },
    "dataType": "i32",
    "exportName": "add",
    "locals": [],
    "name": "add",
    "params": [
      [
        "i32",
        "a",
      ],
      [
        "i32",
        "b",
      ],
    ],
  },
  {
    "__nodeType": "func",
    "body": {
      "__nodeType": "add",
      "dataType": "i32",
      "left": {
        "__nodeType": "localGet",
        "dataType": "i32",
        "name": "a",
        "returnType": "i32",
      },
      "returnType": "i32",
      "right": {
        "__nodeType": "localGet",
        "dataType": "i32",
        "name": "b",
        "returnType": "i32",
      },
    },
    "dataType": "i32",
    "exportName": "addi32",
    "locals": [],
    "name": "add",
    "params": [
      [
        "i32",
        "a",
      ],
      [
        "i32",
        "b",
      ],
    ],
  },
]
`;

exports[`tree creation function 1`] = `
{
  "__nodeType": "func",
  "body": {
    "__nodeType": "block",
    "body": [
      {
        "__nodeType": "drop",
        "returnType": "none",
        "value": {
          "__nodeType": "add",
          "dataType": "i32",
          "left": {
            "__nodeType": "localGet",
            "dataType": "i32",
            "name": "a",
            "returnType": "i32",
          },
          "returnType": "i32",
          "right": {
            "__nodeType": "localGet",
            "dataType": "i32",
            "name": "b",
            "returnType": "i32",
          },
        },
      },
      {
        "__nodeType": "localSet",
        "dataType": "i32",
        "name": "ret",
        "returnType": "none",
        "value": {
          "__nodeType": "add",
          "dataType": "i32",
          "left": {
            "__nodeType": "localGet",
            "dataType": "i32",
            "name": "a",
            "returnType": "i32",
          },
          "returnType": "i32",
          "right": {
            "__nodeType": "localGet",
            "dataType": "i32",
            "name": "b",
            "returnType": "i32",
          },
        },
      },
      {
        "__nodeType": "localGet",
        "dataType": "i32",
        "name": "ret",
        "returnType": "i32",
      },
    ],
    "name": null,
    "returnType": "i32",
  },
  "dataType": "i32",
  "exportName": null,
  "locals": [
    [
      "i32",
      "ret",
    ],
  ],
  "name": "add",
  "params": [
    [
      "i32",
      "a",
    ],
    [
      "i32",
      "b",
    ],
  ],
}
`;

exports[`tree creation function call 1`] = `
{
  "__nodeType": "call",
  "args": [
    {
      "__nodeType": "localGet",
      "dataType": "i32",
      "name": "a",
      "returnType": "i32",
    },
  ],
  "name": "add",
  "returnType": "i32",
}
`;
